fix dark mode qr scan problem

--- a/src/components/common/QrCodeDialog.scss
+++ b/src/components/common/QrCodeDialog.scss
@@ -251,7 +251,7 @@
   }
 }
 .walletconnect-modal__base {
-  background-color: var(--color-background) !important;
+  // background-color: var(--color-background) !important;
   #walletconnect-qrcode-text {
     color: var(--color-text);
   }
